modules/formulize/templates/css/formulize-admin.css
/* ... */
/* ---------- Redirect ------------ */
#xo-redirect {
  margin: 40px 0;
  margin-left: auto;
  margin-right: auto;
  width: 85%;
  background-color: #F2F2F2;
  color: #222;
  text-align: center;
  font-weight: bold;
  padding: 10px;
  text-align: center;
  border: 2px solid #DDDDFF; }

/* ---------- Site close ------------ */
#xo-siteclose-login {
  width: 270px;
  margin: 0 auto; }

#xo-siteclose-login h2 {
  background-color: #f2f2f2;
  font-weight: bold;
  font-size: 1em;
  color: #999;
  padding: 2px;
  margin: 0px;
  text-align: center;
  border: 1px solid #DDDDFF; }

#xo-siteclose-login form {
  padding: 5px 0;
  margin: 0;
  border: 1px solid #DDDDFF;
  text-align: center; }

#xo-siteclose-login input {
  width: 90%; }

#xo-siteclose-login div.button {
  clear: both;
  margin-top: 10px;
  text-align: center; }

#xo-siteclose-login div.button input {
  width: 95%; }

/* ----------  mode debug  ---------- */
#xo-logger-output {
  font-size: 80%; }

/* ------ Header rules ------ */
#xo-header {
  clear: both;
  height: 90px;
  position: relative;
  background-color: #ffffff;
  margin-left: 0px;
  margin-right: 0px;
  border-bottom: 10px solid #e6e6e6;
  background: -webkit-linear-gradient(top, #ffffff, #fafafa);
  background: -moz-linear-gradient(top, #ffffff, #fafafa);
  background: -ms-linear-gradient(top, #ffffff, #fafafa);
  background: -o-linear-gradient(top, #ffffff, #fafafa);
  background: linear-gradient(to bottom, #ffffff, #fafafa); }

#xo-headerlogo {
  float: left;
  margin-left: 40px;
  margin-top: 5px; }

#xo-headerbanner {
  position: relative;
  top: 10px;
  right: 20px;
  float: right; }

/* ------ Header top menu navigation rules ------ */
#xo-globalnav {
  clear: both;
  padding-left: 11px;
  margin-top: 40px;
  padding-bottom: 7px; }

#xo-globalnav a {
  background-color: #59a7d4;
  background: -webkit-linear-gradient(top, #59a7d4, #3391c7);
  background: -moz-linear-gradient(top, #59a7d4, #3391c7);
  background: -ms-linear-gradient(top, #59a7d4, #3391c7);
  background: -o-linear-gradient(top, #59a7d4, #3391c7);
  background: linear-gradient(to bottom, #59a7d4, #3391c7);
  color: #fff;
  font-weight: normal;
  padding: 0.5em 0.75em;
  margin: 0 0.25em;
  border-radius: 3px;
  -moz-border-radius: 3px;
  -webkit-border-radius: 3px; }

/* ---------- Canvas rules ---------- */
#xo-canvas {
  float: right;
  width: 100%;
  min-height: 100%;
  margin-bottom: -19px; }

#xo-canvas-content {
  margin-left: 30px;
  margin-right: 30px; }

#xo-canvas-leftcolumn {
  float: left;
  width: 170px;
  margin-left: -170px; }

* html #xo-canvas-leftcolumn {
  margin-left: -85px; }

#xo-canvas-rightcolumn {
  float: right;
  width: 170px;
  margin-right: -170px; }

* html #xo-canvas-rightcolumn {
  margin-left: -90px;
  margin-right: -100px; }

@media all and (min-width: 0px) {
  head ~ body #xo-canvas-rightcolumn {
    margin-right: -170px; } }
/* ----------Canvas rules (when columns are visible) ---------- */
#xo-canvas.leftcolumn-layout #xo-canvas-columns, #xo-canvas.threecolumns-layout #xo-canvas-columns {
  padding-left: 170px; }

#xo-canvas.rightcolumn-layout #xo-canvas-columns, #xo-canvas.threecolumns-layout #xo-canvas-columns {
  padding-right: 170px; }

/* ----------Page [center column] rules ---------- */
#xo-page {
  float: left;
  width: 100%; }

/* ------- Top and bottom zones (2 columns) ------- */
#xo-page-topleftblocks, #xo-page-bottomleftblocks, #xo-page-topleft_adminblocks, #xo-page-bottomleft_adminblocks {
  float: left;
  width: 48%;
  margin-left: 1%;
  margin-right: 1%;
  padding: 0px; }

#xo-page-toprightblocks, #xo-page-bottomrightblocks, #xo-page-topright_adminblocks, #xo-page-bottomright_adminblocks {
  float: right;
  width: 48%;
  margin-left: 1%;
  margin-right: 1%; }

* html #xo-page-topleftblocks, * html #xo-page-bottomleftblocks,
* html #xo-page-toprightblocks, * html #xo-page-bottomrightblocks,
* html #xo-page-topleft_adminblocks, * html #xo-page-bottomleft_adminblocks,
* html #xo-page-topright_adminblocks, * html #xo-page-bottomright_adminblocks {
  width: 47%; }

#xo-page-topcenterblocks, #xo-page-bottomcenterblocks, #xo-page-topcenter_adminblocks, #xo-page-bottomcenter_adminblocks {
  clear: both;
  margin-left: 1%;
  margin-right: 1%; }

/* ------- Top and bottom zones (3 columns) ------- */
#xo-page-topblocks.xo-lcrpageblocks .xo-blockszone, #xo-page-bottomblocks.xo-lcrpageblocks .xo-blockszone {
  float: left;
  clear: none;
  width: 31.2%; }

* html #xo-page-topblocks.xo-lcrpageblocks .xo-blockszone,
* html #xo-page-bottomblocks.xo-lcrpageblocks .xo-blockszone {
  width: 30.6%; }

#xo-content {
  position: relative;
  clear: both; }

/* ------ Left column / Right column content------ */
#xo-canvas-leftcolumn .xo-block, #xo-canvas-rightcolumn .xo-block {
  margin-bottom: 10px; }

#xo-canvas-leftcolumn .xo-blocktitle {
  padding: 3px;
  text-align: left; }

#xo-canvas-leftcolumn .xo-blocktitle h3 {
  color: #8fBe58;
  font-weight: bold;
  font-size: larger;
  margin: 0;
  padding: 0; }

#xo-canvas-rightcolumn .xo-blocktitle {
  padding: 3px;
  text-align: right; }

#xo-canvas-rightcolumn .xo-blocktitle h3 {
  color: #8fBe58;
  font-weight: bold;
  font-size: larger;
  margin: 0;
  padding: 0; }

#xo-canvas-leftcolumn .xo-blockcontent, #xo-canvas-rightcolumn .xo-blockcontent {
  padding: 3px; }

#xo-canvas-leftcolumn th, #xo-canvas-rightcolumn th {
  color: magenta;
  font-size: 90%; }

/* ------ Center column content ------ */
#xo-page th {
  color: #000; }

#xo-page .xo-block {
  margin-bottom: 5px; }

#xo-page .xo-blocktitle {
  padding: .2em;
  margin: 0 .5em;
  text-align: center; }

#xo-page .xo-blocktitle h3 {
  color: #000;
  font-weight: bold;
  padding: 0;
  margin: 0; }

#xo-page .xo-blockcontent {
  padding: .5em;
  background-color: #F2F2F2;
  border-top: 4px solid #F3AC03; }

/* Start Main Menu */
#mainmenu {
  font-size: .8em; }

#mainmenu a {
  display: block;
  margin: 0;
  padding: 4px;
  color: #8fBe58; }
/* ... */

